Quick fix